...
    private let viewModel = ViewModel()
    private let rowHeight = 200
    private var searchTimer: Timer?
    
    override func viewDidLoad() {
        super.viewDidLoad()
        title = "Photos"
        addSearchBar()
        configureTableView()
        fetchSearchResult()
    }
    
    private func configureTableView() {
...
    }
    
    private func addSearchBar() {
        let search = UISearchController(searchResultsController: nil)
        search.searchResultsUpdater = self
        search.obscuresBackgroundDuringPresentation = false
        search.searchBar.placeholder = "Search photos"
        navigationItem.searchController = search
    }
    
    private func getAllPhotos(for text: String) {
        viewModel.searchPhotos(for: text) { [weak self] in
            self?.storeSearchResult(for: text)
...
