...
                </imageView>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KeJ-Fu-Zut">
                    <rect key="frame" x="159.66666666666666" y="611" width="74" height="35.666666666666629"/>
                    <color key="backgroundColor" systemColor="systemBlueColor"/>
                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    <state key="normal" title="Button"/>
                    <buttonConfiguration key="configuration" style="plain" title="Share" subtitle="">
                        <fontDescription key="titleFontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="18"/>
                    </buttonConfiguration>
                    <connections>
                        <action selector="shareImageButton:" destination="-1" eventType="touchUpInside" id="o3W-RW-fdr"/>
                    </connections>
                </button>
...
